Bug 511333 - [master] Crash when closing a file with a selection
Summary: [master] Crash when closing a file with a selection
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-29 18:12 UTC by paleh
Modified: 2025-11-05 15:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description paleh 2025-10-29 18:12:57 UTC
SUMMARY
When closing a file which has contained a selection at some point, krita hangs for a moment, then crashes. No crash report is written in the log.

STEPS TO REPRODUCE
1. Create a new file
2. Make a selection in this file
3. Close the file

OBSERVED RESULT
Crash

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 11 10.0.26100
Qt Version: 5.15.7
portable version

ADDITIONAL INFORMATION
git 189d0509
doesn't happen in 5.2.14-prealpha-de4145a9
Comment 1 Halla Rempt 2025-11-05 10:06:00 UTC
Relevant merge request: https://invent.kde.org/graphics/krita/-/merge_requests/2517
Comment 2 Dmitry Kazakov 2025-11-05 15:15:22 UTC
Git commit 5b599d1b085a60c490f32e8209686de5cc545f52 by Dmitry Kazakov, on behalf of Luna Lovecraft.
Committed on 05/11/2025 at 15:15.
Pushed by dkazakov into branch 'master'.

Fix crash when closing a file with selection active

M  +3    -8    libs/ui/kis_selection_actions_panel.cpp

https://invent.kde.org/graphics/krita/-/commit/5b599d1b085a60c490f32e8209686de5cc545f52