Fix crash when closing a file with selection active

BUG:511333